[package]
name = "browser-forensic-discovery"
version = "0.3.0"
description  = "Auto-detection of browser profiles on the local filesystem"
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
repository.workspace  = true

[dependencies]
browser-forensic-core = { version = "0.3.0", path = "../browser-forensic-core" }
forensicnomicon = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
