[package]
name = "browser-forensic-firefox"
version = "0.2.0"
description = "Firefox/Gecko browser artifact parsers"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
[dependencies]
anyhow = { workspace = true }
browser-forensic-core = { version = "0.2.0", path = "../browser-forensic-core" }
forensicnomicon = { workspace = true }
lz4_flex = { workspace = true }
rusqlite = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
