[package]
name = "browser-forensic-image"
publish = false            # internal to browser-forensic suite — ADR-0005 (br4n6 ships via app pipeline)
version = "0.1.0"
description = "Disk-image ingest for browser-forensic: a thin, read-only adapter over the forensic-vfs FileSystem contract that locates browser profiles across an image's volumes and runs the existing parsers. Owns zero container/partition/filesystem code."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
forensic-vfs = { workspace = true }
forensicnomicon = { workspace = true }
tempfile = { workspace = true }
browser-forensic-core = { version = "0.3.0", path = "../browser-forensic-core" }
browser-forensic-triage = { version = "0.2.0", path = "../browser-forensic-triage" }

[dev-dependencies]
rusqlite = { workspace = true }

[lints]
workspace = true
