[package]
name = "browser-forensic-mcp"
version = "0.1.0"
description = "MCP server exposing browser history/state to AI agents — secret-free, PII-redacted"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
[lib]
name = "browser_forensic_mcp"
path = "src/lib.rs"

[[bin]]
name = "browser-forensic-mcp"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
browser-forensic-core = { version = "0.1.0", path = "../browser-forensic-core" }
browser-forensic-chrome = { version = "0.1.0", path = "../browser-forensic-chrome" }
browser-forensic-discovery = { version = "0.1.0", path = "../browser-forensic-discovery" }
snss-core = { version = "0.1.0", path = "../../../snss-forensic/core" }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
