[package]
name = "browser-forensic-memory"
version = "0.1.1"
description = "Browser memory scanning — extract browser artifacts from raw byte buffers"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
browser-forensic-core = { version = "0.1.1", path = "../browser-forensic-core" }
url = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
