[package]
name = "browser-forensic-memory"
version = "0.2.1"
description = "Browser memory forensics — process-attributed artifact carving from memory images (memf) plus raw byte-scan fallback"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
browser-forensic-core = { version = "0.3.0", path = "../browser-forensic-core" }
url = { workspace = true }
# memory-forensic (memf) framework — Volatility-class page-table translation,
# kernel-object reading, and analysis bootstrap. Reused rather than reinvented.
# memf-windows is deliberately NOT pulled: it hard-depends on yara-x → wasmtime,
# dragging a large JIT with many RUSTSEC advisories (and a GPL-3.0 dual crate)
# that browser-forensic never exercises. The _EPROCESS walk it would provide is
# reimplemented here on memf-core's public ObjectReader (symbol-driven, no
# hardcoded offsets), keeping the dependency tree clean and audit-green.
memf-format = "0.2"
memf-core = "0.2"
memf-symbols = "0.2"
memf-session = "0.3"

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
