[package]
name = "browser-forensic-safari"
version = "0.2.1"
description = "Safari browser artifact parsers"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
[dependencies]
anyhow = { workspace = true }
browser-forensic-core = { version = "0.3.0", path = "../browser-forensic-core" }
rusqlite = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
plist = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
