[package]
name = "browser-forensic-search"
publish = false            # internal to browser-forensic suite — ADR-0005 (br4n6 ships via app pipeline)
version = "0.2.0"
description = "Search/filter and entity/IOC extraction over normalized browser events (emails, IPs, crypto addresses, Luhn-checked card candidates, known-bad domains)"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
browser-forensic-core = { version = "0.3.0", path = "../browser-forensic-core" }
browser-forensic-interpret = { version = "0.2.0", path = "../browser-forensic-interpret" }
regex = "1"
linkify = "0.11"
bech32 = "0.12"
aho-corasick = "1"
url = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
